[package]
name = "drown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d", "wasm-bindgen" ] }
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
