[package]
name = "drown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
# Add 3D Bevy XPBD with double-precision floating point numbers
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features = ["2d", "debug-plugin", "default", "simd"]}
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
